--- a/exercicios/aula12ex/estilo.css
+++ b/exercicios/aula12ex/estilo.css
@@ -15,9 +15,14 @@ section{
     padding: 15px;
     width: 500px;
     box-shadow: 5px 5px rgba(0, 0, 0, 0.479);
+
+}
+div{
+    text-align: center;
+    padding: 8px;
 }
 footer{
     color: white;
     text-align: center;
-    font-style: italic;
+
 }
